--- a/测试/测试理论/自动化测试模型.md
+++ b/测试/测试理论/自动化测试模型.md
@@ -11,7 +11,7 @@
 #### 关键字驱动
 通过关键字的改变引起测试结果的改变，QTP、robot、framework等都是以关键字驱动为主的自动化工具，因为这类工具主打的易用性，“填表格”式的关键字驱动帮我们封装了很多底层的东西，我们只要考虑三个问题就可以了：我要做什么？ 对谁做？怎么做<p>
 selenium IDE 看做是一种关键字驱动的自动化工具
-![image](790EEB66EF2E42BD914824FE2A48EBF5)
+![image](https://github.com/ermaot/notes/blob/master/%E6%B5%8B%E8%AF%95/%E6%B5%8B%E8%AF%95%E7%90%86%E8%AE%BA/pic/%E8%87%AA%E5%8A%A8%E5%8C%96%E6%B5%8B%E8%AF%95%E6%A8%A1%E5%9E%8B.png)
 自动化脚本转化成表格是这样的：
 
 Selenium IDE 脚本分：命令（command） 、对象（target） 、值（value）
