--- a/mysql/004配置/操作系统和硬件优化.md
+++ b/mysql/004配置/操作系统和硬件优化.md
@@ -33,7 +33,7 @@
 - 频率调整：根据CPU压力动态改变CPU的时钟速度。但不能很好处理间歇性的突发短查询；可能会导致性能波动
 - boost技术。当系统只使用一个核心时，处理器会运行在更高的时钟速度。因此想利用空闲CPU，可能会影响当前的CPU的任务。
 ## 平衡内存和磁盘资源
-![缓存的层级](A8B8084BEE214CC58193B9B12661E6C3)
+![缓存的层级](https://github.com/ermaot/notes/blob/master/mysql/004%E9%85%8D%E7%BD%AE/pic/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%92%8C%E7%A1%AC%E4%BB%B6%E4%BC%98%E5%8C%961.png)
 - 利用各级缓存存放热点数据，以获得更快的访问速度。通常使用启发式方法：最近使用的数据可能会很快被再次使用；相邻的数据可能很快需要使用（空间和时间的局部性原理）
 - cpu寄存器和高速缓存对于程序媛是透明的，并与硬件架构相关，由编译器和CPU管理
 - 数据库缓存效率通常超过操作系统，因为操作系统缓存是为通用任务设计的，而数据库缓存是专用设计的
@@ -210,7 +210,7 @@ show  variables like "%checksum%";
 - 如果备库是为了扩展容量，则可以使用不同的存储引擎，更便宜的硬件或者用RAID0代替RAID5或RAID10
 - 如果备库跟不上主库，可使用固态硬盘
 ## RAID性能优化
-![RAID比较](4C7BE8F748554B699DFC1B67F9421C11)
+![RAID比较](https://github.com/ermaot/notes/blob/master/mysql/004%E9%85%8D%E7%BD%AE/pic/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%92%8C%E7%A1%AC%E4%BB%B6%E4%BC%98%E5%8C%962.png)
 ==这里写一篇==
 #### RAID故障转移、恢复和镜像
 - raid配置（除了RAID0）都提供了冗余
@@ -258,7 +258,7 @@ show  variables like "%checksum%";
 - 许多SAN允许多节点组成集群
 - SAN可以混合闪存和机械硬盘，可以有大到TB的闪存作为缓存
 #### SAN基准测试
-![SAN基准测试](69A67FB6B6B347C7AE50FF15D6636392)
+![SAN基准测试](https://github.com/ermaot/notes/blob/master/mysql/004%E9%85%8D%E7%BD%AE/pic/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%92%8C%E7%A1%AC%E4%BB%B6%E4%BC%98%E5%8C%963.png)
 
 同步16kb，innodb配置O_DIRECT写入
 - 因为可以缓冲合并IO，SAN可以承受大量的连续写入
