--- a/mysql/006引擎/缓冲池.md
+++ b/mysql/006引擎/缓冲池.md
@@ -24,7 +24,7 @@ buf0lru.C | 757|
 - 缓冲池大小直接影响数据库的整体性能。32bit操作系统最多可以将缓冲池设置为3GB，可以打开操作系统的==PAE选项==获得最大36GB的内存支持
 - innodb缓冲池大小参数：innodb_buffer_pool_size
 - 缓冲池数据页类型：索引页，数据页，undo页，插入缓冲（insert buffer），自适应哈希索引（adaptive hash index），锁信息
-![innodb缓冲池结构](28C6F8FEDBF24B95AA68BB07FBE4A83A)
+![innodb缓冲池结构](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E7%BC%93%E5%86%B2%E6%B1%A01.png)
 - innodb缓冲池中缓存的大部分都是B+树索引的叶子节点（data page）和非叶子节点（index page）
 - 索引页、数据页、undo页、插入缓冲都可以在外部设备持久化；而自适应哈希和锁信息不能持久化
 - show innodb status查看：
