--- a/mysql/024丁奇的mysql45讲/一条更新语句是如何执行的.md
+++ b/mysql/024丁奇的mysql45讲/一条更新语句是如何执行的.md
@@ -14,7 +14,7 @@
 1. innodb_flush_log_at_trx_commit = 0 表示事务完成时不刷日志到磁盘，而等master每秒刷新（宕机可能损失最后一秒数据）
 2. innodb_flush_log_at_trx_commit = 1 表示commit时同步刷到磁盘
 3. innodb_flush_log_at_trx_commit = 2 表示commit时异步刷到磁盘（有这个动作，但不是肯定会写入而由操作系统决定写入）；mysql宕机但操作系统不宕机，则也不会丢失数据；操作系统宕机，可能丢失未刷入磁盘的那部分数据
-![参数不同导致的性能区别](ED674CC316224B81AA4682847B5B34DF)
+![参数不同导致的性能区别](https://github.com/ermaot/notes/blob/master/mysql/024%E4%B8%81%E5%A5%87%E7%9A%84mysql45%E8%AE%B2/pic/%E4%B8%80%E6%9D%A1%E6%9B%B4%E6%96%B0%E8%AF%AD%E5%8F%A5%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8C%E7%9A%841.png)
 
 #### 物理逻辑日志
 重做日志分为物理日志、逻辑日志、物理逻辑日志
@@ -122,10 +122,10 @@ round robin（重做日志组满了，就循环使用重做日志）。为了前
 ```
 
 - Redo log 以顺序的方式写入文件文件，写满时则回溯到第一个文件，进行覆盖写
-![image](63E3BE683CA44816909C0736F61CA96A)
+![image](https://github.com/ermaot/notes/blob/master/mysql/024%E4%B8%81%E5%A5%87%E7%9A%84mysql45%E8%AE%B2/pic/%E4%B8%80%E6%9D%A1%E6%9B%B4%E6%96%B0%E8%AF%AD%E5%8F%A5%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8C%E7%9A%842.png)
 - 在InnoDB内部，逻辑上ib_logfile被当成了一个文件，对应同一个space id。由于是使用512字节block对齐写入文件，可以很方便的根据全局维护的LSN号计算出要写入到哪一个文件以及对应的偏移量。
 - Redo log文件是循环写入的，在覆盖写之前，总是要保证对应的脏页已经刷到了磁盘
-![image](B2FC3F58A96F4FBDBA9B6691DA892798)
+![image](https://github.com/ermaot/notes/blob/master/mysql/024%E4%B8%81%E5%A5%87%E7%9A%84mysql45%E8%AE%B2/pic/%E4%B8%80%E6%9D%A1%E6%9B%B4%E6%96%B0%E8%AF%AD%E5%8F%A5%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8C%E7%9A%843.png)
 - 在非常大的负载下Redo log 可能产生的速度非常快，导致频繁的刷脏操作，进而导致性能下降
 - 通常在未做checkpoint的日志超过文==件总大小的76%之后==，InnoDB 会强制的preflush脏页，导致大量用户线程stall住
 
@@ -209,7 +209,7 @@ bool log_calc_max_ages(log_t &log) {
 4. 当上次checkpoint的lsn和当前lsn的距离超过max_checkpoint_age_async但小于max_checkpoint_age（81%）时，用户线程做一次异步checkpoint（后台异步线程执行CHECKPOINT信息写入操作），无需等待checkpoint完成。
 
 - log_sys与日志文件和日志缓冲区关系
-![image](E2D5BB57343C478195E03DAD94DD282F)
+![image](https://github.com/ermaot/notes/blob/master/mysql/024%E4%B8%81%E5%A5%87%E7%9A%84mysql45%E8%AE%B2/pic/%E4%B8%80%E6%9D%A1%E6%9B%B4%E6%96%B0%E8%AF%AD%E5%8F%A5%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8C%E7%9A%844.png)
 
 #### Mini transaction（MTR）
 ##### MTR简述
@@ -420,7 +420,7 @@ enum mlog_id_t {
 - 提交mtr log
 当提交一个mini transaction时，需要将对数据的更改记录提交到公共buffer中，并将对应的脏页加到flush list上。入口函数为mtr_t::commit()，当修改产生脏页或者日志记录时，调用mtr_t::Command::execute，执行过程如下：
 1. mtr_t::Command::prepare_write()
-![image](BF1DEDCE79504E97A86FCCB68783CDBB)
+![image](https://github.com/ermaot/notes/blob/master/mysql/024%E4%B8%81%E5%A5%87%E7%9A%84mysql45%E8%AE%B2/pic/%E4%B8%80%E6%9D%A1%E6%9B%B4%E6%96%B0%E8%AF%AD%E5%8F%A5%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8C%E7%9A%845.png)
 2. mtr_t::Command::finish_write：将日志从mtr中拷贝到公共log buffer
 3. 如果本次修改产生了脏页，获取log_sys->log_flush_order_mutex，随后释放log_sys->mutex
 4. 将当前Mtr修改的脏页加入到flush list上，脏页上记录的lsn为当前mtr写入的结束点lsn。基于上述加锁逻辑，能够保证flush list上的脏页总是以LSN排序
@@ -446,7 +446,7 @@ enum mlog_id_t {
 
 #### 基本结构
 - ==回滚段实际上是一种 Undo 文件组织方式==，每个回滚段又有多个undo log slot。具体的文件组织方式如下图所示
-![image](AF3FEE4AA3634AA79610A47AE355F8C6)
+![image](https://github.com/ermaot/notes/blob/master/mysql/024%E4%B8%81%E5%A5%87%E7%9A%84mysql45%E8%AE%B2/pic/%E4%B8%80%E6%9D%A1%E6%9B%B4%E6%96%B0%E8%AF%AD%E5%8F%A5%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8C%E7%9A%846.png)
 - 上图展示了基本的Undo回滚段布局结构，其中:
 1. rseg0预留在系统表空间ibdata中;
 2. rseg 1~rseg 32这32个回滚段存放于临时表的系统表空间中;
