--- a/linux/性能/上下文切换.md
+++ b/linux/性能/上下文切换.md
@@ -5,7 +5,7 @@
 
 #### 进程上下文切换
 linux按照特权等级，把进程空间划分成用户空间和内核空间。
-![image](https://github.com/ermaot/notes/blob/master/linux/%E6%80%A7%E8%83%BD/pic/%E4%B8%8A%E4%B8%8B%E6%96%87%E5%88%87%E6%8D%A2.png)
+![image](pic/%E4%B8%8A%E4%B8%8B%E6%96%87%E5%88%87%E6%8D%A2.png)
 - 内核空间具有最高权限，可以访问所有资源
 - 用户空间只能访问受限资源，不能直接访问内存等硬件设备，必须通过系统调用陷入到内核中，才能访问这些特权资源
 - 进程既可以在用户空间运行，也可以在内核空间运行，分别叫做进程的用户态和内核态
