--- a/测试/测试理论/测试理论基础.md
+++ b/测试/测试理论/测试理论基础.md
@@ -1,6 +1,6 @@
 ## 软件测试分类
 #### 软件工程的V型模型
-![软件工程的V型模型](https://github.com/ermaot/notes/blob/master/%E6%B5%8B%E8%AF%95/%E6%B5%8B%E8%AF%95%E7%90%86%E8%AE%BA/pic/%E6%B5%8B%E8%AF%95%E7%90%86%E8%AE%BA%E5%9F%BA%E7%A1%80.png)
+![软件工程的V型模型](pic/%E6%B5%8B%E8%AF%95%E7%90%86%E8%AE%BA%E5%9F%BA%E7%A1%80.png)
 - 单元测试：单元测试（或模块测试）是对程序中的单个子程序或具有独立功能的代码段进行测试的过程
 - 集成测试：集成测试是单元测试的基础上，将通过单元模块组装成系统或子系统，再进行测试，重点是检查模块之间的接口是否正确。
 - 系统测试：系统测试是针对整个产品系统进行的测试，验证系统是否满足了需求规格的定义，以及软件系统的正确性和性能等是否满足其规约所指定的要求。
