--- a/mysql/002DB基础理论/索引.md
+++ b/mysql/002DB基础理论/索引.md
@@ -5,7 +5,7 @@
 2. 写操作：先读取页进入缓冲池，对页做修改，然后将修改后的“脏页”异步写入磁盘
 3. LRU算法维护缓冲池
 4. mysql缓冲池是基于存储引擎的（MyISAM：key_buffer_size;   innodb: innodb_buffer_pool_size ）
-![缓冲池对mysql性能影响（数据大小18G）](https://github.com/ermaot/notes/blob/master/mysql/002DB%E5%9F%BA%E7%A1%80%E7%90%86%E8%AE%BA/pic/%E7%B4%A2%E5%BC%951-%E7%BC%93%E5%86%B2%E6%B1%A0%E5%AF%B9mysql%E6%80%A7%E8%83%BD%E5%BD%B1%E5%93%8D.jpg)
+![缓冲池对mysql性能影响（数据大小18G）](pic/%E7%B4%A2%E5%BC%951-%E7%BC%93%E5%86%B2%E6%B1%A0%E5%AF%B9mysql%E6%80%A7%E8%83%BD%E5%BD%B1%E5%93%8D.jpg)
 
 - 顺序读取<p>
 顺序地读取磁盘上的页（逻辑上顺序）
@@ -21,7 +21,7 @@
 
 #### B+树
 所有记录节点按照键值大小排列，各叶子节点使用指针连接
-![B+树](https://github.com/ermaot/notes/blob/master/mysql/002DB%E5%9F%BA%E7%A1%80%E7%90%86%E8%AE%BA/pic/%E7%B4%A2%E5%BC%952-B%2B%E6%A0%91.png)
+![B+树](pic/%E7%B4%A2%E5%BC%952-B%2B%E6%A0%91.png)
 
 ##### 填充因子
 B+使用填充因子来控制树的==删除==
