--- a/mysql/006引擎/服务管理.md
+++ b/mysql/006引擎/服务管理.md
@@ -17,7 +17,7 @@ srv0start. h| 43|启动服务
 4. 相关事务的回滚（根据数据和日志文件中记录的信息,判断是否需要在引擎启动时,对数据进行rollback (回滚)操作）;
 5. 工作线程的创建（创建几种核心的后台线程,用于实现异步数据的读/写(I/O线程) 、事务锁超时的监控(lock timeout线程)和数据的脏页刷新、无效重做日志的清理工作）
 
-![innodb启动过程](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%861.png)
+![innodb启动过程](pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%861.png)
 #### 相关重要参数
 - srv_unix_file_flush_method
 
@@ -91,12 +91,12 @@ srv_conc_queue |UT_LIST_NODE_T(srv_conc_slot_t)| 等待队列
 #### 文件的创建与加载
 - InnoDB引擎在启动时,需要创建或者加载表空间文件(ibdata*) 和重做日志文件(ib_logfile*)。在第一次启动InnoDB引擎时,数据文件被创建。初始化完成后,以后每次启动InnoDB引擎时,自动加载已经创建的数据和日志文件
 - 数据文件的创建与加载
-![数据文件创建流程](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%862.png)
+![数据文件创建流程](pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%862.png)
 1. 表空间由多个文件组成，总大小不能小于10M
 2. windows下，表空间每个文件大小不能大于4G
 3. 一旦创建，不可更改大小，如需更改，需要导出数据再重建表空间再导入数据
 - 重做文件的创建与加载
-![重做文件的创建与加载](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%863.png)
+![重做文件的创建与加载](pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%863.png)
 #### 启动后台线程
 - InnoDB在启动的时候,需要启动几种不同的后台线程,如下:
 1. io_handler_thread
@@ -216,7 +216,7 @@ log_flush_up_to(ut_dulint_max, LOG_WAIT_ONE_GROUP);
 4. 合并至少20个页面上的Insertbuffer记录
 5. 至少刷新100个页面的数据到磁盘,并且创建新的检查点
 
-![master线程](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%864.png)
+![master线程](pic/%E6%9C%8D%E5%8A%A1%E7%AE%A1%E7%90%864.png)
 ## 锁超时监控线程
 - 锁超时监控线程srv_lock_timeout_and_monitor_thread主要用于打印监控信息和检测事务持有的锁
 - srv_lock_timeout and_monitor_thread线程以1秒的周期方式进行轮询,每隔15秒,线程会尝试去打印一些InnoDB引擎内部的信息：semaphores、transactions 、file I/O、insert buffer. buffer pool and memory、row operations、tablespace information、dictinary information
