--- a/mysql/006引擎/经典存储引擎.md
+++ b/mysql/006引擎/经典存储引擎.md
@@ -202,7 +202,7 @@ for default_part_db_type
 5. 插入缓冲（insert buffer）
 6. 自适应哈希索引
 #### innodb架构
-![innodb架构](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E7%BB%8F%E5%85%B8%E5%AD%98%E5%82%A8%E5%BC%95%E6%93%8E1.png)
+![innodb架构](pic/%E7%BB%8F%E5%85%B8%E5%AD%98%E5%82%A8%E5%BC%95%E6%93%8E1.png)
 1. 在第一层,Handle API的存在,使得InnoDB 能够顺利插入到MySQL服务器中，同时InnoDB还为应用系统提供了API,在这种情况下,用户可以直接将InnoDB存储引擎嵌入到他的应用系统之中
 2. 第二层是事务层。在InnoDB中,所有的行为都发生在事务中。如果我们在my.cnf中配置了auto-commit这一属性, 那么我们执行的每个SQL语句都是单独的事务，SQL关键字COMMIT、ROLLBACK等被查询解析子系统解析为InnoDB特有查询语句
 3. 第三层是锁功能层.该层完成锁功能和事务管理的功能(如回滚、提交等操作).InnoDB采用行级的读写锁，Lock 目录下的lock0lock.c处理所有锁功能.InnoDB还特意使用了一个锁表来跟踪各种各样锁的情况
@@ -241,7 +241,7 @@ for default_part_db_type
 4. 双写入缓存
 5. MySQL复制功能信息
 - innodb 表空间、段、集合、行
-![image](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E7%BB%8F%E5%85%B8%E5%AD%98%E5%82%A8%E5%BC%95%E6%93%8E2.png)
+![image](pic/%E7%BB%8F%E5%85%B8%E5%AD%98%E5%82%A8%E5%BC%95%E6%93%8E2.png)
 
 ## 其他内容待补充
 
