--- a/mysql/006引擎/记录.md
+++ b/mysql/006引擎/记录.md
@@ -25,7 +25,7 @@
 #### 物理记录格式
 - 物理记录由两部分组成：extra info 和实际行存数据
 - extra info 由col offset list 和 record header 组成，物理数据记录的实际起始位置是original offset
-![物理记录格式](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E8%AE%B0%E5%BD%951.png)
+![物理记录格式](pic/%E8%AE%B0%E5%BD%951.png)
 - col offset list 组成
 1. col offset list记录的是每个列所在位置的偏移量列表，根据列逆序存放（==为何要逆序==）。如果列长度全部小于127（==此处有疑问==），则用一个字节存放；否则用两个字节
 2. col offset list 还记录了该列是否为null以及是否含有外部信息
@@ -44,7 +44,7 @@ next_record|18 |该记录指向的下一条记录(original offset 位置)
 - heap no 表示该堆中记录的序号，主要是为了实现行锁的功能
 - 记录之间通过next record串联
 - 除了本身的列，会隐式增加回滚指针（7字节），事务ID（6字节）两列，如果没有主键，还会增加一个主键列（6字节）
-![行举例](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E8%AE%B0%E5%BD%952.png)
+![行举例](pic/%E8%AE%B0%E5%BD%952.png)
 - char长度未满时，用0x20填充；字符集为latin1，每个字符1字节；如果为utf8，每个字符3字节
 - varchar的null不占字节，char的null占字节0x80并用0x00填充
 #### 大记录格式
@@ -54,7 +54,7 @@ next_record|18 |该记录指向的下一条记录(original offset 位置)
 2. 列大于REC_MAX_DATA_SIZE (16* 1024 bytes).
 - 大记录属性为extern，用REC_2BYTE_EXTERN_MASK标记
 
-![大记录格式](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E8%AE%B0%E5%BD%953.png)
+![大记录格式](pic/%E8%AE%B0%E5%BD%953.png)
 
 - extern列格式
 
@@ -73,7 +73,7 @@ BTR_EXTERN_LEN |8 |存放于off-page的字节数
 - Infimum还可以优化锁的性能
 ## 逻辑记录
 - 逻辑记录存放于内存中，，由 dtuple_struct 表示，每个逻辑记录包含多个字段，用 dfield_struct 表示
-![逻辑记录结构](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/pic/%E8%AE%B0%E5%BD%954.png)
+![逻辑记录结构](pic/%E8%AE%B0%E5%BD%954.png)
 - dtuple_struct结构：
 
 变 量 |  说明
