--- a/mysql/006引擎/锁.md
+++ b/mysql/006引擎/锁.md
@@ -111,7 +111,7 @@ X |不兼容|不兼容 |不兼容 |不兼容 |不兼容
 - implicit lock是指索引记录逻辑上有x-lock但内存中并无该锁信息，例：聚集索引记录用户增加一条记录但未提交，则该记录有一个implicit lock；辅助索引修改了聚集索引的记录对应的辅助索引列，则有implicit lock
 #### 聚集索引记录的隐式锁
 - 若根据事务ID隐藏列判断当前是否为活跃，则索引记录上有implicit lock；否则无
-![image](https://github.com/ermaot/notes/blob/master/mysql/006%E5%BC%95%E6%93%8E/%E9%94%81.md)
+![image](%E9%94%81.md)
 #### 辅助索引记录的隐式锁
 
 ## 加锁操作
