--- a/mysql/006引擎/存储管理.md
+++ b/mysql/006引擎/存储管理.md
@@ -33,13 +33,13 @@ os0file.c | 1475|底层文件操作实现
 
 innodb的页结构 |说明
 ---| ---|
-file header（文件头） | 8部分，38字节<p>fil_page_space_or_checksum（4字节） mysql4.1之后表示checksum值<p>fil_page_offset（4字节）表空间中页的偏移值<p>fil_page_prev（4字节）,fil_page_next（4字节），顾名思义，表示前一个页面和后一个页面的指针<p>fil_page_LSN（8字节）该页最后修改的LSN<p>fil_page_type（2字节），页类型<p>fil_page_file_flush_LSN（8字节），在数据文件的某一个页才有，代表文件至少被更新到该LSN<p>fil_page_arch_log_no_or_space_id（4字节）mysql4.1开始代表数据页属于哪个表空间
-page header（页头） | 14部分，56字节<p>PAGE_N_DIR_SLOTS（2字节） page directory 的slots数<p> PAGE_HEAP_TOP（2字节） 堆中第一个记录的指针<p> PAGE_N_HEAP（2字节）  堆中的记录数 <p> PAGE_FREE（2字节）指向空闲列表的首指针<p>PAGE_GARBAGE（2字节）已删除的字节数，即行记录结构中 delete flag为1的记录的数目<p>PAGE_LAST_INSERT（2字节） 最后插入记录的位置<p> PAGE_DIRECTION（2字节）插入的方向 <p> PAGE_N_DIRECTION（2字节）一个方向连续插入的数量<p>PAGE_N_RECS（2字节）该页中记录的数量<p> PAGE_MAX_TRX_ID（8字节）当前页的最大事务ID<p> PAGE_LEVEL（2字节）当前页在索引中的位置，0x00代表叶子节点<p> PAGE_INDEX_ID（8字节）当前页属于哪个索引ID <p> PAGE_BTR_SEG_LEAF（10字节）B+树叶节点中文件段的首指针位置，仅B+树的root页中定义<p>PAGE_BTR_SEG_TOP（8字节）B+树非叶节点中文件段的首指针位置，仅B+树的root页中定义<p>
-infimum + supremum records | innodb 每个数据页会有两个虚拟行记录以限定记录边界，infimum记录比任何主键还小的值，supremum记录比任何主键还大的值<p>页建立的时候创建，并任何情况都不会删除
+file header（文件头） | 8部分，38字节<br>fil_page_space_or_checksum（4字节） mysql4.1之后表示checksum值<br>fil_page_offset（4字节）表空间中页的偏移值<br>fil_page_prev（4字节）,fil_page_next（4字节），顾名思义，表示前一个页面和后一个页面的指针<br>fil_page_LSN（8字节）该页最后修改的LSN<br>fil_page_type（2字节），页类型<br>fil_page_file_flush_LSN（8字节），在数据文件的某一个页才有，代表文件至少被更新到该LSN<br>fil_page_arch_log_no_or_space_id（4字节）mysql4.1开始代表数据页属于哪个表空间
+page header（页头） | 14部分，56字节<br>PAGE_N_DIR_SLOTS（2字节） page directory 的slots数<br> PAGE_HEAP_TOP（2字节） 堆中第一个记录的指针<br> PAGE_N_HEAP（2字节）  堆中的记录数 <br> PAGE_FREE（2字节）指向空闲列表的首指针<br>PAGE_GARBAGE（2字节）已删除的字节数，即行记录结构中 delete flag为1的记录的数目<br>PAGE_LAST_INSERT（2字节） 最后插入记录的位置<br> PAGE_DIRECTION（2字节）插入的方向 <br> PAGE_N_DIRECTION（2字节）一个方向连续插入的数量<br>PAGE_N_RECS（2字节）该页中记录的数量<br> PAGE_MAX_TRX_ID（8字节）当前页的最大事务ID<br> PAGE_LEVEL（2字节）当前页在索引中的位置，0x00代表叶子节点<br> PAGE_INDEX_ID（8字节）当前页属于哪个索引ID <br> PAGE_BTR_SEG_LEAF（10字节）B+树叶节点中文件段的首指针位置，仅B+树的root页中定义<br>PAGE_BTR_SEG_TOP（8字节）B+树非叶节点中文件段的首指针位置，仅B+树的root页中定义<br>
+infimum + supremum records | innodb 每个数据页会有两个虚拟行记录以限定记录边界，infimum记录比任何主键还小的值，supremum记录比任何主键还大的值<br>页建立的时候创建，并任何情况都不会删除
 user records（用户记录，即行记录） | innodb是索引组织表
 free space（空闲空间） | 链表数据结构；记录被删除时，会加入到空闲链表中
 page directory（页目录） | 存放了记录的相对位置
-file trailer（文件结尾信息） | 为了页面写入时候的完整性，file trailer只有8字节的FIL_PAGE_END_LSN<p>前4个字节是本页的checksum，后四个字节与 FIL_PAGE_LSN 的LSN相同<p>前4字节与fil_page_space_or_checksum比较，后4字节与FIL_PAGE_LSN比较，确认是否相同
+file trailer（文件结尾信息） | 为了页面写入时候的完整性，file trailer只有8字节的FIL_PAGE_END_LSN<br>前4个字节是本页的checksum，后四个字节与 FIL_PAGE_LSN 的LSN相同<br>前4字节与fil_page_space_or_checksum比较，后4字节与FIL_PAGE_LSN比较，确认是否相同
 
 - fil_page_offset 是4字节，所以一个表空间最大数据是2^32 * 页面大小（默认16kb） = 64TB
 - FIL_PAGE_LSN 与FIL_PAGE_END_LSN如果一致，则页是完整的，由函数buf_page_is_corrupted判断
@@ -71,8 +71,8 @@ FSP_SEG_INODES_FREE | 16 | 空闲的inode页链表
 ---|---|---
 XDES_ID | 8 | 区所属段的ID
 FSP_XDES_FLST_NODE | 12|该区所在链表FSP_FREE,或FSP_FRAG_FREE,或FRAG_FULL 中的位置
-XDES_STATE | 4|区的状态,有效值为:<p>XDES_FREE该区在FSP_FREE链表中<p>XDES_FREE_FRAG该区是碎片区,在FSP_FREE_FRAG链表中<p>XDES_FULL_FRAG该区是碎片区,在FSP_FULL_FRAG链表中,区中的页都已经被使用<p>XDES_SEG区隶属于某个段
-XDES_BITMAP | 16|区中64个页是否被使用的状态,每个页用2位表示(实际仅使用一位信息),定义如下:<p>XDES_FREE_BIT页是否已经被使用<p>XDES_CLEAN_BIT未被使用
+XDES_STATE | 4|区的状态,有效值为:<br>XDES_FREE该区在FSP_FREE链表中<br>XDES_FREE_FRAG该区是碎片区,在FSP_FREE_FRAG链表中<br>XDES_FULL_FRAG该区是碎片区,在FSP_FULL_FRAG链表中,区中的页都已经被使用<br>XDES_SEG区隶属于某个段
+XDES_BITMAP | 16|区中64个页是否被使用的状态,每个页用2位表示(实际仅使用一位信息),定义如下:<br>XDES_FREE_BIT页是否已经被使用<br>XDES_CLEAN_BIT未被使用
 
 - 一个页可以容纳多个区描述符（最多256个）
 - 每个区描述符的偏移量都是16384（256*64）的倍数
@@ -96,7 +96,7 @@ FSEG_FREE | 16 | 空闲区链表
 FSEG_NOT_FULL | 16 | 全部页未被使用的区链表
 FSEG_FULL | 16 | 全部页已被使用的区链表
 FSEG_MAGIC_N | 4 | 仅在调试模式下使用
-FSEG_FRAG_ARR |128 | 碎片页链表,一共32个页,保存每个页在表空间中的偏移量<p>因此总共需要32x4个字节
+FSEG_FRAG_ARR |128 | 碎片页链表,一共32个页,保存每个页在表空间中的偏移量<br>因此总共需要32x4个字节
 - segment inode 依旧是索引页，页的分配依然从碎片区开始
 - segment inode位置不固定，需要用segment header（10字节）指向它
 
@@ -168,12 +168,12 @@ pos | ulint| 此异步I/O请求在数组中的位置
 reserved |ibool |此位置是否已经被一个异步I/O请求所占用
 len| ulint |异步I/O请求的读或者写的数据块的长度
 buf | byte*| 异步I/O请求的读/写缓冲区
-type| ulint  |异步I/O请求的类型,有效值为:<p>OS_ FILE_ READ<p>OS_ FILE_ WRITE
+type| ulint  |异步I/O请求的类型,有效值为:<br>OS_ FILE_ READ<br>OS_ FILE_ WRITE
 offset | ulint | 异步I/O请求的文件起始偏移量的低32位值
 offset_high | ulint | 异步I/O请求的文件起始偏移量的高32位值
 file | OS_file_t | 异步I/O请求的文件描述符
 name | char* | 异步I/O请求的文件名称
-io_already_done | ibool | 此字段只对InnoDB存储引擎模拟实现的异步I/O处理方式有效.<p>此字段为true时表示:异步I/O请求的实际物理异步I/O已经完成了,<p>但是异步I/O处理线程还没有告知此异步I/O请求的发起线程
+io_already_done | ibool | 此字段只对InnoDB存储引擎模拟实现的异步I/O处理方式有效.<br>此字段为true时表示:异步I/O请求的实际物理异步I/O已经完成了,<br>但是异步I/O处理线程还没有告知此异步I/O请求的发起线程
 message1 | void* | 由异步I/O的发起线程传递的信息,在I/O操作完成后
 message2 | void* | 用以找到发起的对象
 #### 异步IO线程
