--- a/linux/性能/如何理解平均负载.md
+++ b/linux/性能/如何理解平均负载.md
@@ -32,7 +32,7 @@ top - 22:03:59 up 184 days, 19:47,  1 user,  load average: 0.11, 0.11, 0.08
 3. 如果1分钟内远大于15分钟，说明最近1分钟负载增加，可能是临时的，也可能是持续的，需要持续观察，如果是持续的且超过cpu个数，需要调查并优化
 
 - ==当平均负载高于cpu数量70%的时候，需要排查==
- 
+
 ## 平均负载与CPU利用率
 - CPU利用率是单位时间内CPU的繁忙情况，而平均负载包括正在使用CPU的进程还包括等待CPU和等待IO的进程，二者不一定完全对应
 - CPU密集的进程，大量CPU会导致平均负载升高
@@ -122,3 +122,20 @@ Average:        0     22989   24.78    0.00    0.00   24.78     -  stress
 Average:        0     22990    0.10    0.00    0.00    0.10     -  watch
 Average:        0     23015    0.00    0.10    0.00    0.10     -  pidstat
 ```
+
+## load average数据来源与计算
+
+load是从/proc/loadavg中读取的。
+
+```
+# cat /proc/loadavg 
+0.23 0.08 0.06 1/320 6722
+```
+
+每个值的含义依次为：
+lavg_1 (0.23) 1-分钟平均负载
+lavg_5 (0.08) 5-分钟平均负载
+lavg_15(0.06) 15-分钟平均负载
+nr_running (1) 在采样时刻，运行队列的任务的数目，与/proc/stat的procs_running表示相同意思
+nr_threads (320) 在采样时刻，系统中活跃的任务的个数（不包括运行已经结束的任务）
+last_pid(6722) 最大的pid值，包括轻量级进程，即线程。
