--- a/mysql/002DB基础理论/分区.md
+++ b/mysql/002DB基础理论/分区.md
@@ -305,7 +305,7 @@ create table partition_perf1(a int,b int) partition by range(b)(partition p0 val
 -rw-rw---- 1 mysql mysql 488M 6月  22 15:00 partition_perf.ibd
 ```
 
-可以看到分区的文件大小基本一致；同时分区文件大小之和与partition_perf0大小一致。partition_perf比partition_perf0稍小，是因为partition_perf0有隐式主键，占用了存储空间，partition_perf本身就有主键，所以不需要额外的隐式主键。
+可以看到分区的文件大小基本一致；同时分区文件大小之和与partition_perf0大小一致。
 
 analyze之后，我们做两个查询
 
