--- a/mysql/002DB基础理论/索引.md
+++ b/mysql/002DB基础理论/索引.md
@@ -98,7 +98,7 @@ mysql可以对多列创建联合索引
 #### 覆盖索引
 innodb支持覆盖索引（covering index）或者索引覆盖（index coverage）：从辅助索引中即可查到信息，而不需要查询聚集索引，减少IO
 
-#### 优化器不适用索引
+#### 优化器不适用索引的情况
 - 多发生于范围查找、join等情况
 - 当访问数据占表比例比较大（>20%），优化器会优先选择聚集索引
 - 对于无法索引覆盖，优化器选择辅助索引的情况是数据量比较少
