--- a/mysql/006引擎/存储引擎概述.md
+++ b/mysql/006引擎/存储引擎概述.md
@@ -4,7 +4,7 @@
 - 支持外键
 - 非锁定读（类似oracle，读的情况下不产生锁）
 - 数据存储于逻辑表空间，由innodb管理
-- 每一个表对应一个ibd文件
+- 每一个表对应一个ibd文件(如果设置了innodb_file_per_table参数的话)
 - 可使用裸设备（类似oracle）
 - 使用mvcc来获得高并发
 - 实现了标准的4种隔离级别，默认repeatable read
@@ -16,7 +16,7 @@
 ## myisam 存储引擎
 - 不支持事务
 - 使用表锁
-- 全文索引
+- 支持全文索引
 - 适用于OLAP
 - 表由MYD和MYI组成，MYD存放数据，MYI存放索引
 - myisampack工具使用霍夫曼编码压缩/解压数据文件，压缩后只读
