--- a/mysql/006引擎/缓冲池.md
+++ b/mysql/006引擎/缓冲池.md
@@ -27,7 +27,7 @@ buf0lru.C | 757|
 ![innodb缓冲池结构](pic/%E7%BC%93%E5%86%B2%E6%B1%A01.png)
 - innodb缓冲池中缓存的大部分都是B+树索引的叶子节点（data page）和非叶子节点（index page）
 - 索引页、数据页、undo页、插入缓冲都可以在外部设备持久化；而自适应哈希和锁信息不能持久化
-- show innodb status查看：
+- show innodb status(show engine innodb status)查看：
 1. Total memory allocated 304095804; in additional pool allocated 1198592<p>
 InnoDB所分配的内存总量为304095804字节,额外内存池占用1198592 字节内存
 2. Buffer pool size 16384<p>
