--- a/mysql/002DB基础理论/索引.md
+++ b/mysql/002DB基础理论/索引.md
@@ -26,6 +26,20 @@
 ##### 填充因子
 B+使用填充因子来控制树的==删除==
 
+在mysql8里，可以修改
+
+```
+> show variables like "%fill%";
++--------------------+-------+
+| Variable_name      | Value |
++--------------------+-------+
+| innodb_fill_factor | 100   |
++--------------------+-------+
+1 row in set (0.00 sec)
+```
+
+但mysql5.5和mariadb无此参数
+
 ##### B+树索引
 - B+一般高度2 ~ 4层，即查找一个键值一般只需要2 ~ 4次IO操作
 - MySQL的索引是存储引擎实现的，也就是说各引擎的索引实现方式不同
