--- a/python/Python基础/1数据结构与算法.md
+++ b/python/Python基础/1数据结构与算法.md
@@ -230,6 +230,7 @@ Out[29]: {'a': {2, 3, 5}, 'b': {4, 5}}
 ```
 defaultdict的作用是在于，当字典里的key不存在但被查找时，返回的不是keyError而是一个默认值
 [本段代码来自](https://www.jianshu.com/p/bbd258f99fd3)
+
 ```
 In [57]: dict1 = defaultdict(int)
 
@@ -255,7 +256,6 @@ Out[66]: []
 
 In [67]: dict5['a']
 Out[67]: ()
-
 ```
 
 ```
@@ -274,8 +274,7 @@ Out[72]: {'a': [1, 2], 'b': [4]}
 ```
 
 ## 字典排序
-OrderedDict 内部维护着一个根据键插入顺序排序的双向链表。每次当一个新的元
-素插入进来的时候，它会被放到链表的尾部。一个 OrderedDict 的大小是一个普通字典的两倍
+OrderedDict 内部维护着一个根据键插入顺序排序的双向链表。每次当一个新的元素插入进来的时候，它会被放到链表的尾部。一个 OrderedDict 的大小是一个普通字典的两倍
 ```
 In [76]: from collections import OrderedDict
 
