--- a/python/Python基础/2字符串和文本.md
+++ b/python/Python基础/2字符串和文本.md
@@ -1,5 +1,8 @@
 ## 分隔符分隔字符串（string的split亦可，但功能简单）
 re.split
+
+多分隔符
+
 ```
 In [80]: line = 'asdffjdk;afed,fjek,asdf,foo'
 
@@ -10,6 +13,12 @@ Out[82]: ['asdffjdk', 'afed', 'fjek', 'asdf', 'foo']
 
 In [83]: re.split(r'[;,\s]\s*',line)
 Out[83]: ['asdffjdk', 'afed', 'fjek', 'asdf', 'foo']
+
+In [84]: re.split(r'[;,]',line)
+Out[84]: ['asdffjdk', 'afed', 'fjek', 'asdf', 'foo']
+
+In [85]: re.split('[;,]',line)
+Out[85]: ['asdffjdk', 'afed', 'fjek', 'asdf', 'foo']
 ```
 ## 开头或者结尾匹配
 startswith或者endswith
@@ -147,6 +156,7 @@ In [54]: for i in res.finditer("1testa2test"):
 ## 字符串替换
 str.replacce()或者re.sub()<p>
 如果忽略大小写，可以在正则替换时使用re.IGNORECASE
+
 ```
 In [55]: text = 'yeah,butno,butyeah,butno,butyeah'
 
@@ -200,9 +210,7 @@ In [76]: num.match('\u0661\u0662\u0663')
 Out[76]: <_sre.SRE_Match object; span=(0, 3), match='١٢٣'>
 ```
 ## 删除不必要字符
-strip() 方法能用于删除开始或结尾的字符。 lstrip() 和 rstrip() 分别从左和
-从右执行删除操作。默认情况下，这些方法会去除空白字符，但是你也可以指定其他
-字符
+strip() 方法能用于删除开始或结尾的字符。 lstrip() 和 rstrip() 分别从左和从右执行删除操作。默认情况下，这些方法会去除空白字符，但是你也可以指定其他字符
 ```
 In [78]: s = ' helloworld \n'
 
@@ -322,8 +330,7 @@ In [5]: from html.parser import HTMLParser
 In [6]: p = HTMLParser()
 
 In [7]: p.unescape(s)
-C:\Users\Administrator\AppData\Local\Programs\Python\Python36\Scripts\ipython:1: DeprecationWarning: The unescape method
- is deprecated and will be removed in 3.5, use html.unescape() instead.
+C:\Users\Administrator\AppData\Local\Programs\Python\Python36\Scripts\ipython:1: DeprecationWarning: The unescape method is deprecated and will be removed in 3.5, use html.unescape() instead.
 Out[7]: 'Spicy"Jalapeño".'
 
 In [9]: import html
