--- a/python/Python基础/6数据编码与处理.md
+++ b/python/Python基础/6数据编码与处理.md
@@ -24,7 +24,7 @@ In [4]: from collections import namedtuple
    ...:         row = Row(*r)
 ```
 
-## 读取jason
+## 读取json
 ```
 In [5]: import json
 
