--- a/linux/网络/给网络注入延迟.md
+++ b/linux/网络/给网络注入延迟.md
@@ -1,5 +1,13 @@
 有些时候，需要人为引入网络延迟，模拟网络条件比较差的情况下，集群的行为。这时候，可以使用tc工具。 tc是 Traffic Control的简写，用来控制网络流量的。
 
+## 安装tc
+
+```
+yum install tc
+```
+
+
+
 ### 注入延迟之前
 
 ```
@@ -18,6 +26,20 @@ PING 172.31.180.74 (172.31.180.74) 56(84) bytes of data.
 ```
 tc qdisc add dev eth0 root netem delay 8ms
 ```
+
+如果执行出现
+
+```
+"Error: Specified qdisc not found"
+```
+
+则需要安装kernel-modules-extra
+
+```
+yum -y install kernel-modules-extra
+```
+
+
 
 使用ping测试注入的结果
 
